# rage

./: Cargo.toml  README.md
src/: button.rs  graph_node.rs  main.rs  renderer.rs  style.rs  test_fixture.rs  widget.rs
src/appearance/: background.rs  color.rs  font.rs  mod.rs
src/collision/: mod.rs
src/event/: mod.rs
src/geometry/: dimension.rs  layout.rs  mod.rs  overflow.rs  position.rs  spacing.rs
src/layout/: box_model.rs  dimension.rs  flow.rs  mod.rs  position.rs  spacing.rs
src/renderer/: geometry.rs  image.rs  mod.rs
src/scene_graph/: mod.rs  node.rs
src/style/: mod.rs
src/tree/: mod.rs
src/widget/: button.rs  div.rs  image.rs  mod.rs  text.rs
